// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default button should render disabled 1`] = `
<button
  className="button-default "
  disabled={true}
>
  My custom calue
</button>
`;

exports[`Default button should render with value 1`] = `
<button
  className="button-default "
  disabled={null}
>
  My custom value
</button>
`;

exports[`Default button should render without value 1`] = `
<button
  className="button-default "
  disabled={null}
/>
`;
